--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,48 @@
 body {
   font-family: 'Noto Sans', sans-serif;
 }
-
+.abstract-box {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 1.5rem 1rem;
+}
 .institution-logos {
   display: flex;
   justify-content: center;
   align-items: flex-end; /* align bottoms */
   gap: 3rem;
   margin-top: 1.5rem;
+}
+.video-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.video-container video {
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.method-overview {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.method-diagram {
+  max-width: 60%;
+  height: auto;
+  border-radius: 0px;
+}
+
+.method-diagram2 {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0px;
 }
 
 .logo-eth {
